[package]
name = "wruste"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Wruste is a multi-purpose web framework for Rust"
homepage = "https://docs.wruste.com/"
repository = "https://github.com/wruste/wruste/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
